--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,9 +41,7 @@ services:
       - med-app-network
     command: >
       sh -c "
-        npx prisma db push &&
-        npx prisma db seed &&
-        npm run start:prod
+        npm run start
       "
 
 volumes:
