--- a/.dockerignore
+++ b/.dockerignore
@@ -2,16 +2,9 @@ node_modules
 dist
 npm-debug.log
 .env
-.env.local
-.env.*.local
 .git
 .gitignore
-.vscode
-.idea
-*.md
-coverage
+README.md
 .DS_Store
-
-
-
-
+coverage
+.vscode
