--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "nest build",
     "start:dev": "nest start --watch",
     "seed": "prisma db seed",
-    "start": "npx prisma db push && npx prisma db seed && node dist/main.js",
+    "start": "npx prisma db push && npx prisma db seed && node dist/src/main.js",
     "reset": "prisma migrate reset --force"
   },
   "dependencies": {
