--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "med-app",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "maksim",
   "private": true,
   "license": "UNLICENSED",
   "prisma": {
